Add options for running Leiningen on Java 9 & 10